# patwoz-notify

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: validate.yaml
api/: Cargo.toml
api/src/: api.rs  response.rs
database/: Cargo.toml
database/src/: lib.rs  subscribe_data.rs
migrations/: 20231207211756_init.sql
src/: api.rs  app_error.rs  main.rs  notification.rs  server.rs  subscribe_data.rs  subscription.rs
web/: bun.lockb  components.json  index.html  package.json  sw.ts  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  Root.tsx  Routes.tsx  Subscription.ts  SubscriptionCard.tsx  api.ts  main.tsx
web/src/Home/: HomeRoute.tsx  Subscription.ts  SubscriptionCard.tsx
web/src/api/: api.ts
web/src/components/ui/: card.tsx
