[package]
name = "patwoz-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version ="1.0.108", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
web-push = { version = "0.10.0", features = ["hyper-client"] }

[dev-dependencies]
axum-test = "14.0.0"

