[package]
name = "patwoz-notify"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "1.74.1"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
cookie = "0.18.0"
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version ="1.0.108", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
web-push = { version = "0.10.0", features = ["hyper-client"] }

[dev-dependencies]
axum-test = "14.0.0"

