[package]
name = "patwoz-notify"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "1.74.1"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
api = { path = "./api" }

