[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cookie = "0.18.0"
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version ="1.0.108", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.34.0", features = ["full"] }
web-push = { version = "0.10.0", features = ["hyper-client"] }
